[gd_scene load_steps=6 format=3 uid="uid://drjh5mm3ejdk0"]

[ext_resource type="Script" path="res://scripts/game_screen.gd" id="1_6gye6"]
[ext_resource type="Texture2D" uid="uid://dnlerlc7jq1qm" path="res://art/building_sprite.png" id="2_1y61m"]
[ext_resource type="PackedScene" uid="uid://fjje58a10eia" path="res://scenes/player.tscn" id="3_j0p6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya27i"]
size = Vector2(126.5, 126.5)

[sub_resource type="Curve2D" id="Curve2D_emjlp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4.62074, 0.724757, 0, 0, 0, 0, 1277.3, 7.24762, 0, 0, 0, 0, 1275.98, 779.12, 0, 0, 0, 0, 3.30053, 785.643, 0, 0, 0, 0, 1.32022, 0.724757)
}
point_count = 5

[node name="GameScreen" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_6gye6")

[node name="GameScreenBackground" type="TextureRect" parent="."]
offset_top = -7.0
offset_right = 1941.0
offset_bottom = 1087.0

[node name="Building" type="Area2D" parent="."]
position = Vector2(572, 329)
collision_layer = 3
collision_mask = 3

[node name="BuildingSprite" type="Sprite2D" parent="Building"]
texture = ExtResource("2_1y61m")

[node name="BuildingCollisionShape" type="CollisionShape2D" parent="Building"]
position = Vector2(-0.25, 0.25)
shape = SubResource("RectangleShape2D_ya27i")

[node name="MobSpawnPath" type="Path2D" parent="."]
position = Vector2(-6.82327, 5.58835)
scale = Vector2(0.910359, 0.829145)
curve = SubResource("Curve2D_emjlp")

[node name="MobSpawnPathFollow" type="PathFollow2D" parent="MobSpawnPath"]
position = Vector2(4.62074, 0.724757)
rotation = 0.00512525

[node name="MobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("3_j0p6g")]
position = Vector2(336, 328)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(572, 331)

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
